syntax = "proto3";

option csharp_namespace = "AElf.Kernel";

message Transaction
{
    Hash From = 1;
    Hash To = 2;
    uint64 IncrementId = 3;
    string MethodName = 4;
    bytes Params = 5;
    uint64 Fee = 6;
    bytes R = 7;
    bytes S = 8;
    bytes P = 9;
}

message Hash{
    bytes Value = 1;
}

message BlockHeader{
    int32 Version = 1;
    Hash PerviousBlock = 2;
    Hash MerkleTreeRootOfTransactions = 3;
    Hash MerkleTreeRootOfWorldState = 4;
    uint64 Index = 5;
}

message BlockBody{
    Hash BlockHeader = 1;
    repeated Hash Transactions =2;
}

message Block{
    BlockHeader Header = 1;
    BlockBody Body = 2;
}

message SmartContractRegistration{
    int32 Category = 1;
    Hash ContractHash = 2;
    bytes ContractBytes = 3;
}

message SmartContractDeployment{
    Hash ContractHash = 1;
    bytes ConstructParams =2;
}

message SmartContractInvokeContext{
    Hash Caller = 1;
    uint64 IncrementId = 2;
}

message Change{
    repeated Hash Befores = 1;
    Hash After = 2;
    Hash TransactionIds = 3;
    Hash LatestChangedBlockHash = 4;
}

message PairHashChange{
    Hash Key = 1;
    Change Value = 2;
}

message ChangesDict{
    repeated PairHashChange Dict = 1;
}

message Chain{
    Hash Id = 1;
    Hash GenesisBlockHash = 2;
}


message TransactionResult{
    Hash TransactionId = 1;
    Status status = 2;
    bytes logs = 3;
}

enum Status {
    NotExisted = 0;
    Refused = 1;
    Pending = 2;
    ExecutedFailed = 3;
    Mined = 4;
}